# ASE-Encoder

./: CMakeLists.txt  README.md  Readme.md  package.xml
config/: default.yaml
data/: encodingdata.txt  trainingdata.txt
include/: ASEEncoder.h  ASEPrepocessor.h  ASEPrerequisite.h  ASETree.h  ASEUtils.h  ISEEncoder.h  ISEPrepocessor.h  ISEPrerequisite.h  ISETree.h  ISEUtils.h
include/beginner_tutorials/: BoWEncoder.h  Config.h  LocalDescriptorEncoder.h  LocalDescriptorExtractor.h  PlaceRecognizer.h  WPUHEncoder.h  common_include.h
include/beginner_tutorials/DesEncoders/: BoWEncoder.h  DescriptorEncoder.h  WPUHEncoder.h
include/beginner_tutorials/DesExtractors/: DescriptorExtractor.h  FPFHExtractor.h
src/: ASEEncoder.cpp  ASEPrepocessor.cpp  ASETree.cpp  ASEUtils.cpp  BoWEncoder.cpp  Config.cpp  ISEEncoder.cpp  ISEPrepocessor.cpp  ISETree.cpp  ISEUtils.cpp  LocalDescriptorExtractor.cpp  PlaceRecognizer.cpp  WPUHEncoder.cpp  listener.cpp
src/DesEncoders/: BoWEncoder.cpp  WPUHEncoder.cpp
src/DesExtractors/: DescriptorExtractor.cpp  FPFHExtractor.cpp
test/: demo.cpp  test.cpp
